--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -6,7 +6,7 @@ spring:
     jpa:
         hibernate:
             dialect: org.hibernate.dialect.PostgreSQLDialect
-            ddl-auto: update
+            ddl-auto: create-drop
         database-platform: org.hibernate.dialect.PostgreSQLDialect
         open-in-view: false
 
