--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -11,6 +11,7 @@ spring:
         open-in-view: false
 
 server:
+    port: 8443
     ssl:
         key-store-type: PKCS12
         key-store: classpath:paola_certificato.p12
