fixed lazy loading

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -10,6 +10,11 @@ spring:
         database-platform: org.hibernate.dialect.PostgreSQLDialect
         open-in-view: false
 
+    session:
+        store-type: jdbc
+        jdbc:
+            initialize-schema: always
+
 server:
     port: 8443
     ssl:
