--- a/pom.xml
+++ b/pom.xml
@@ -54,8 +54,11 @@
             <artifactId>spring-boot-devtools</artifactId>
             <optional>true</optional>
         </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.datatype</groupId>
+            <artifactId>jackson-datatype-hibernate5-jakarta</artifactId>
+        </dependency>
     </dependencies>
-
     <build>
         <plugins>
             <plugin>
