--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -16,10 +16,10 @@ spring:
             initialize-schema: always
 
 server:
-    port: 8080
-#    ssl:
-#        key-store-type: PKCS12
-#        key-store: classpath:ssl_certificato.p12
-#        key-store-password: paola2023
-#        key-alias: paola
-#        enabled: true
+    port: 8443
+    ssl:
+        key-store-type: PKCS12
+        key-store: classpath:ssl_certificato.p12
+        key-store-password: paola2023
+        key-alias: paola
+        enabled: true
